# ComputationalFinance

Coursework/: CMakeLists.txt
Coursework/src/: .bash_profile  Makefile  conjgrad.m  csv.cpp  csv.h  linearAlgebra.cpp  linearAlgebra.h  main.cpp  parameter_estimation.cpp  parameter_estimation.h  portfolio.cpp  portfolio.h  portfolioSolver  read_data.cpp  read_data.h  testSolutions.m  unitTests.cpp  unitTests.h
ProfessorCode/: BSEqLCP.h  BSModel02.cpp  BSModel02.h  BinModel01.cpp  BinModel02.cpp  CNMethod.h  DoubDigitOpt.h  Exe1-10_DigitalPut.h  Exe1-11_Main07.cpp  Exe1-11_Options03.cpp  Exe1-2_Main.cpp  Exe1-4_Main05.cpp  Exe1-6_Main.cpp  Exe1-7_Main.cpp  Exe1-9_Options03.h  Exe3-1_Main14.cpp  Exe3-2_Options09.cpp  Exe4-1_Main17.cpp  Exe4-4_Main14.cpp  Exe5-10_EurBasket.h  Exe5-11_EurBasket.cpp  Exe5-11_EurBasket.h  Exe5-11_Main23.cpp  Exe5-11_PathDepOption05.cpp  Exe5-11_PathDepOption05.h  Exe5-11_SumOfCalls.cpp  Exe5-1_Main19.cpp  Exe5-2_PathDepOption03.h  Exe5-3_PathDepOption03.h  Exe5-5_EurCall.h  Exe5-5_GmtrAsianCall.cpp  Exe5-5_GmtrAsianCall.h  Exe5-6_BarrierCall.cpp  Exe5-6_BarrierCall.h  Exe5-6_EurCall.h  Exe5-6_PathDepOption04.h  Exe5-7_Main22.cpp  Exe5-8_PathDepOption05.h  Exe5-9_Main23.cpp  Exe5-9_PathDepOption05.cpp  (+45 more)
code/ProfessorCode/: BinModel02.h  DoubDigitOpt.cpp  EurCall.cpp  EurCall.h  Exe1-10_DigitalPut.cpp  (+87 more)
code/lecture_2/: CMakeLists.txt  DefInt.cpp  DefInt.h  Main09.cpp  Options06.h
code/lecture_3/: BinLattice01.h  CMakeLists.txt  Main13.cpp  Options07.h  Options08.cpp
code/lecture_4/: CMakeLists.txt  Solver01.h  Solver02.h  Solver03.h
(+11 files in other folders)
